# mtg-glue

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  config.yaml  config.yaml.example  docker-compose.yml  pyproject.toml
.cursor/rules/: echo-mtg-csv-shape.mdc  parse-dont-validate.mdc  reuse-abstractions.mdc
.data/: config.yaml
.github/workflows/: ci.yml
browser_glue/: hello_world.py
mtg_glue/: echo_mtg_to_moxfield.py
mtg_glue/legacy/: ds_to_echo_mtg.py
mtg_glue/lib/: __init__.py  config.py  filters.py  mappers.py  overrides.py  reporters.py  rewrites.py  transformers.py
mtg_glue/models/: __init__.py  echo_mtg_export_row.py  moxfield_import_row.py  types.py
projects/browser_automation/: Dockerfile  docker-entrypoint.sh  echo_moxfield_etl.py  fetch_capsolver_extension.sh  hello_world.py  run_headed_local.sh
projects/cli/: echo_mtg_to_moxfield.py
projects/etl/: Dockerfile  docker-entrypoint.sh  echo_moxfield_etl.py  fetch_capsolver_extension.sh  run_headed_local.sh
projects/infra/bootstrap/: main.tf  outputs.tf  providers.tf  variables.tf
projects/infra/mtg_glue/: etl.tf  main.tf  outputs.tf  providers.tf  variables.tf
projects/lib/: __init__.py  config.py  diff.py  filters.py  log_config.py  mappers.py  overrides.py  reporters.py  rewrites.py  s3.py  transformers.py  utils.py
projects/models/: __init__.py  config.py  echo_mtg_export_row.py  echo_mtg_item.py  moxfield_import_row.py  moxfield_item.py  overrides.py  types.py
scripts/: bootstrap_tf.sh  release_bump.sh
tests/: conftest.py  test_parse_strict.py
