[tool.poetry]
name = "mtg-glue"
version = "0.1.0"
description = "A bunch of scripts I use to manage my MTG collection."
authors = ["Kevin McCartney"]
readme = "README.md"
packages = [{ include = "mtg_glue" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "^2.12.5"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
black = "^26.1.0"
isort = "^7.0.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.scripts]
moxfield-import = "mtg_glue.echo_mtg_to_moxfield:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

