[tool.poetry]
name = "mtg-glue"
version = "0.3.0"
description = "A bunch of scripts I use to manage my MTG collection."
authors = ["Kevin McCartney"]
readme = "README.md"
packages = [
  { include = "cli", from = "projects" },
  { include = "lib", from = "projects" },
  { include = "models", from = "projects" },
  { include = "etl", from = "projects" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "^2.12.5"
pyyaml = "^6.0.2"
playwright = "^1.58"
python-dotenv = "^1.0"
boto3 = "^1.35"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pylint = "^4.0.4"
black = "^26.1.0"
isort = "^7.0.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"
types-pyyaml = "^6.0.12.20250915"
types-boto3 = "^1.42.82"
debugpy = "^1.8.20"
pre-commit = "^4.5.1"
commitizen = "^4.13.9"

[tool.poetry.scripts]
moxfield-import = "cli.echo_mtg_to_moxfield:main"
echo-moxfield-etl = "etl.echo_moxfield_etl:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
[[tool.mypy.overrides]]
module = "loguru.*"
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_provider = "poetry"
update_changelog_on_bump = true
changelog_incremental = true
# Same default as Commitizen; needs `bump` in conventional-pre-commit hook args.
bump_message = "release: $current_version"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
